<resources>
    <string name="app_name">Foobar Remote</string>

    <string name="isplaying_intent_extra_key">isPlaying</string>
    <string name="socketaddress_intent_extra_key">Address</string>

    <!-- Strings related to login -->
    <string name="prompt_ip">IP</string>
    <string name="prompt_port">Port</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_ip">Invalid IP</string>
    <string name="error_invalid_port">Port should be greater than 1024</string>
    <string name="error_field_required">This field is required</string>
    <string name="checkbox_text">Currently playing?</string>
    <string name="ip_pref_key">savedipkey</string>
    <string name="port_pref_key">savedportkey</string>

    <!-- Strings related to FoobarActivity -->
    <string name="launcher_description">"LAUNCH</string>
    <string name="play_pause_description">"PLAY_PAUSE</string>
    <string name="prev_description">"PREV</string>
    <string name="next_description">"NEXT</string>
    <string name="stop_description">"STOP"</string>
    <string name="volup_description">"VOL_UP</string>
    <string name="voldown_description">"VOL_DOWN</string>
    <string name="random_description">"RANDOM</string>
    <string name="exit_description">"DISC</string>
    <string name="order_text">Order:</string>
    <string name="now_playing">Now playing:</string>
    <string name="artist_track">Artist - Track</string>

    <!-- Playback order spinner entries -->
    <string-array name="playback_order">
        <item>Default</item>
        <item>Repeat (playlist)</item>
        <item>Repeat (track)</item>
        <item>Random</item>
        <item>Shuffle (tracks)</item>
        <item>Shuffle (albums)</item>
        <item>Shuffle (folders)</item>
        <item>Playback order...</item>
    </string-array>

</resources>
