<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ronmad.foobarremote.FoobarActivity">

    <ImageButton
        android:id="@+id/launchButton"
        android:src="@drawable/foobar2k"
        android:contentDescription="@string/launcher_description"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:layout_alignParentEnd="false"
        android:onClick="sendMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/playButton"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/play_pause_description"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/launchButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:src="@drawable/ic_pause_black_24dp"
        android:contentDescription="@string/play_pause_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/launchButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/prevButton"
        android:src="@drawable/ic_skip_previous_black_24dp"
        android:contentDescription="@string/prev_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/launchButton"
        app:layout_constraintRight_toLeftOf="@id/playButton" />

    <ImageButton
        android:id="@+id/nextButton"
        android:src="@drawable/ic_skip_next_black_24dp"
        android:contentDescription="@string/next_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/launchButton"
        app:layout_constraintLeft_toRightOf="@id/playButton" />

    <ImageButton
        android:id="@+id/stopButton"
        android:src="@drawable/ic_stop_black_24dp"
        android:contentDescription="@string/stop_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/launchButton"
        app:layout_constraintRight_toLeftOf="@id/prevButton"/>

    <ImageButton
        android:id="@+id/randomButton"
        android:src="@drawable/random"
        android:contentDescription="@string/random_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/launchButton"
        app:layout_constraintLeft_toRightOf="@id/nextButton"/>

    <ImageButton
        android:id="@+id/volDownButton"
        android:src="@drawable/ic_volume_down_black_24dp"
        android:contentDescription="@string/voldown_description"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintLeft_toLeftOf="@id/stopButton"/>

    <ImageButton
        android:id="@+id/volUpButton"
        android:src="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="@string/volup_description"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintLeft_toLeftOf="@id/prevButton" />

    <Spinner
        android:id="@+id/orderSpinner"
        android:entries="@array/playback_order"
        android:prompt="@string/order_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/volUpButton"
        app:layout_constraintBottom_toBottomOf="@id/volUpButton"
        app:layout_constraintLeft_toLeftOf="@id/playButton"
        app:layout_constraintRight_toRightOf="@id/randomButton" />

    <TextView
        android:id="@+id/nowPlayingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/artist_track"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/stopButton"
        app:layout_constraintRight_toRightOf="@id/randomButton" />

    <TextView
        android:id="@+id/nowPlayingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintLeft_toLeftOf="@id/stopButton"
        app:layout_constraintBottom_toTopOf="@id/nowPlayingText" />

</android.support.constraint.ConstraintLayout>
