<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ronmad.foobarremote.FoobarActivity">

    <ImageButton
        android:id="@+id/launchButton"
        android:src="@drawable/foobar2k"
        android:contentDescription="@string/launcher_description"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="75dp"
        android:onClick="sendMessage" />

    <ImageButton
        android:id="@+id/playButton"
        android:src="@drawable/play"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/launchButton"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/play_pause_description"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:src="@drawable/pause"
        android:contentDescription="@string/play_pause_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/launchButton"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage" />

    <ImageButton
        android:id="@+id/prevButton"
        android:src="@drawable/prev"
        android:contentDescription="@string/prev_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/launchButton"
        android:layout_toLeftOf="@id/playButton"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage" />



    <ImageButton
        android:id="@+id/nextButton"
        android:src="@drawable/next"
        android:contentDescription="@string/next_description"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/launchButton"
        android:layout_toRightOf="@id/playButton"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage" />

    <Space
        android:id="@+id/space2"
        android:layout_width="10dp"
        android:layout_height="60dp"
        android:layout_below="@id/playButton"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/volDownButton"
        android:src="@drawable/voldown"
        android:contentDescription="@string/voldown_description"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/playButton"
        android:layout_toLeftOf="@id/space2"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage" />

    <ImageButton
        android:id="@+id/volUpButton"
        android:src="@drawable/volup"
        android:contentDescription="@string/volup_description"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/playButton"
        android:layout_toRightOf="@id/space2"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="sendMessage" />

</RelativeLayout>
